fixed star rating overflow on LI

--- a/frontend/src/components/ListingsIndex/ListingIndexItem/ListingIndexItem.css
+++ b/frontend/src/components/ListingsIndex/ListingIndexItem/ListingIndexItem.css
@@ -73,3 +73,6 @@
 	color: black;
 }
 
+#listing_index_item_rating {
+	min-width: 48px;
+}
